chore: use buildx to build docker images in e2e (#1018)
* chore: build images concurrency

Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/test/testdata/charts/config.yaml
+++ b/test/testdata/charts/config.yaml
@@ -13,6 +13,8 @@ scheduler:
   - name: artifact
     hostPath:
       path: /tmp/artifact
+  config:
+    verbose: true
 
 cdn:
   image: d7yio/cdn
@@ -33,6 +35,8 @@ cdn:
   - name: artifact
     hostPath:
       path: /tmp/artifact
+  config:
+    verbose: true
 
 dfdaemon:
   image: d7yio/dfdaemon
@@ -51,6 +55,7 @@ dfdaemon:
   config:
     verbose: true
     pprofPort: 9999
+    metrics: 127.0.0.1:8888
     scheduler:
       disableAutoBackSource: true
     proxy:
@@ -84,3 +89,5 @@ manager:
   - name: artifact
     hostPath:
       path: /tmp/artifact
+  config:
+    verbose: true
