fix: docker actions typo
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   push_image_to_registry:
-    name: Push Scheduler Image
+    name: Push Image
     runs-on: ubuntu-latest
     strategy:
       matrix:
