feat: scheduler config
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/docs/zh-CN/deployment/configuration/manager.yaml
+++ b/docs/zh-CN/deployment/configuration/manager.yaml
@@ -24,6 +24,7 @@ database:
     host: dragonfly
     port: 3306
     dbname: manager
+    migrate: true
   # tls:
   #   # 客户端证书文件路径
   #   cert: /etc/ssl/certs/cert.pem
@@ -31,6 +32,8 @@ database:
   #   key: /etc/ssl/private/key.pem
   #   # CA 证书文件路径
   #   ca: /etc/ssl/certs/ca.pem
+  #   # 客户端是否验证服务端的证书链和 hostname
+  #   insecureSkipVerify: true
   # redis 配置
   redis:
     password: dragonfly
