--- a/manager/config/testdata/manager.yaml
+++ b/manager/config/testdata/manager.yaml
@@ -17,6 +17,11 @@ database:
     host: foo
     port: 3306
     dbname: foo
+    tls:
+      cert: foo
+      key: foo
+      ca: foo
+      insecureSkipVerify: true
   redis:
     password: bar
     host: bar
