--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -69,7 +69,9 @@ jobs:
           kubectl wait po proxy-2 --namespace dragonfly-e2e --for=condition=ready --timeout=10m
 
       - name: Run E2E test
-        run: make actions-e2e-test-coverage
+        run: |
+          ginkgo -v -r --race --fail-fast --cover --trace --progress test/e2e -- --feature-gates=dfget-range=true
+          cat coverprofile.out >> coverage.txt
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
