--- a/docs/zh-CN/deployment/configuration/scheduler.yaml
+++ b/docs/zh-CN/deployment/configuration/scheduler.yaml
@@ -11,11 +11,11 @@ server:
   # daemon 动态配置缓存目录
   # linux 上默认目录 /var/cache/dragonfly
   # macos(仅开发、测试), 默认目录是 /Users/$USER/.dragonfly/cache
-  cacheDir: ""
+  cacheDir: ''
   # daemon 日志目录
   # linux 上默认目录 /var/log/dragonfly
   # macos(仅开发、测试), 默认目录是 /Users/$USER/.dragonfly/logs
-  logDir: ""
+  logDir: ''
 
 # scheduler 调度策略配置
 scheduler:
@@ -55,18 +55,18 @@ dynConfig:
 # 实例主机信息
 host:
   # 实例所在机房
-  idc: ""
+  idc: ''
   # 实例网络拓扑信息
-  netTopology: ""
+  netTopology: ''
   # 实例所在的地理位置信息
-  location: ""
+  location: ''
 
 # manager 配置
 manager:
   # 启动与 manager 的连接
   enable: true
   # manager 访问地址
-  addr: ""
+  addr: ''
   # 注册的 scheduler 集群 ID
   schedulerClusterID:
   # manager 心跳配置
@@ -87,11 +87,11 @@ job:
   # redis 配置
   redis:
     # 服务地址
-    host: ""
+    host: ''
     # 服务端口
     port: 6379
     # 密码
-    password: ""
+    password: ''
     # broker 数据库
     brokerDB: 1
     # backend 数据库
@@ -102,7 +102,7 @@ metrics:
   # 启动数据收集服务
   enable: false
   # 数据服务地址
-  addr: ":8000"
+  addr: ':8000'
   # 开机收集 peer host 数据
   enablePeerHost: false
 
@@ -117,4 +117,4 @@ pprof-port: -1
 
 # jaeger 地址
 # 默认使用空字符串（不配置 jaeger）, 例如: http://jaeger.dragonfly.svc:14268/api/traces
-jaeger: ""
+jaeger: ''
