--- a/docs/en/deployment/configuration/scheduler.yaml
+++ b/docs/en/deployment/configuration/scheduler.yaml
@@ -11,22 +11,24 @@ server:
   # cacheDir is dynconfig cache storage directory
   # in linux, default value is /var/cache/dragonfly
   # in macos(just for testing), default value is /Users/$USER/.dragonfly/cache
-  cacheDir: ''
+  cacheDir: ""
   # logDir is the log storage directory
   # in linux, default value is /var/log/dragonfly
   # in macos(just for testing), default value is /Users/$USER/.dragonfly/logs
-  logDir: ''
+  logDir: ""
 
 # scheduler policy configuration
 scheduler:
   # algorithm configuration to use different scheduling algorithms,
   # default configuration supports "default" and "ml"
-  # "default" is the rule-based scheduling algorithm, "ml" is the machine learning scheduling algorithm
+  # "default" is the rule-based scheduling algorithm,
+  # "ml" is the machine learning scheduling algorithm
   # It also supports user plugin extension, the algorithm value is "plugin",
   # and the compiled `d7y-scheduler-plugin-evaluator.so` file is added to
   # the dragonfly working directory plugins
   algorithm: default
-  # backSourceCount is the number of backsource clients when the CDN is unavailable
+  # backSourceCount is the number of backsource clients
+  # when the CDN is unavailable
   backSourceCount: 3
   # retry scheduling back-to-source limit times
   retryBackSourceLimit: 5
@@ -57,11 +59,11 @@ dynConfig:
 # scheduler host configuration
 host:
   # idc is the idc of scheduler instance
-  idc: ''
+  idc: ""
   # netTopology is the net topology of scheduler instance
-  netTopology: ''
+  netTopology: ""
   # location is the location of scheduler instance
-  location: ''
+  location: ""
 
 # manager configuration
 manager:
@@ -76,7 +78,15 @@ manager:
     # interval
     interval: 5s
 
-# machinery async job configuration, see https://github.com/RichardKnop/machinery
+# cdn configuration
+cdn:
+  # scheduler enable cdn as P2P peer,
+  # if the value is false, P2P network will not be back-to-source through
+  # cdn but by dfdaemon and preheat feature does not work
+  enable: true
+
+# machinery async job configuration,
+# see https://github.com/RichardKnop/machinery
 job:
   # scheduler enable job service
   enable: true
@@ -89,11 +99,11 @@ job:
   # redis configuration
   redis:
     # host
-    host: ''
+    host: ""
     # port
     port: 6379
     # password
-    password: ''
+    password: ""
     # brokerDB
     brokerDB: 1
     # backendDB
@@ -104,7 +114,7 @@ metrics:
   # scheduler enable metrics service
   enable: false
   # metrics service address
-  addr: ':8000'
+  addr: ":8000"
   # enable peer host metrics
   enablePeerHost: false
 
@@ -119,4 +129,4 @@ verbose: false
 pprof-port: -1
 
 # jaeger endpoint url, like: http://jaeger.dragonfly.svc:14268/api/traces
-jaeger: ''
+jaeger: ""
