--- a/test/testdata/charts/config.yaml
+++ b/test/testdata/charts/config.yaml
@@ -56,6 +56,8 @@ dfdaemon:
     verbose: true
     pprofPort: 9999
     metrics: 127.0.0.1:8888
+    download:
+      prefetch: true
     scheduler:
       disableAutoBackSource: true
     proxy:
