chore: update e2e dfget test
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/test/testdata/k8s/proxy.yaml
+++ b/test/testdata/k8s/proxy.yaml
@@ -27,6 +27,7 @@ data:
       netTopology: ""
       securityDomain: ""
     download:
+      prefetch: true
       calculateDigest: true
       downloadGRPC:
         security:
