--- a/deploy/docker-compose/docker-compose.yaml
+++ b/deploy/docker-compose/docker-compose.yaml
@@ -1,32 +1,95 @@
-version: "3.9"
+version: "3"
 services:
-  dfdaemon:
-    image: dragonflyoss/dfdaemon:v2.0.1
+  redis:
+    image: redis:6-alpine
+    container_name: redis
+    network_mode: host
+    command: >
+      --requirepass dragonfly
+    healthcheck:
+      test: ["CMD", "redis-cli","-a","dragonfly","ping"]
+      interval: 1s
+      timeout: 3s
+      retries: 30
+
+  mysql:
+    image: mariadb:10.6
+    container_name: mysql
+    network_mode: host
+    environment:
+      - MARIADB_USER=dragonfly
+      - MARIADB_PASSWORD=dragonfly
+      - MARIADB_DATABASE=manager
+      - MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=yes
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin status"]
+      interval: 1s
+      timeout: 3s
+      retries: 30
+
+  manager:
+    image: dragonflyoss/manager:v2.0.2-rc.9
+    container_name: manager
+    network_mode: host
     depends_on:
-    - scheduler
-    - cdn
+      - redis
+      - mysql
+    restart: always
+    volumes:
+      - /tmp/log/dragonfly:/var/log/dragonfly
+      - ./config/manager.yaml:/etc/dragonfly/manager.yaml
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z 127.0.0.1 8080 || exit 1"]
+      interval: 1s
+      timeout: 3s
+      retries: 30
+
+  dfdaemon:
+    image: dragonflyoss/dfdaemon:v2.0.2-rc.9
+    depends_on:
+      - scheduler
+      - cdn
     container_name: dfdaemon
     network_mode: host
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z 127.0.0.1 65001 || exit 1"]
+      interval: 1s
+      timeout: 3s
+      retries: 30
     volumes:
-    - /tmp/log/dragonfly:/var/log/dragonfly
-    - ./config/dfget.yaml:/etc/dragonfly/dfget.yaml
+      - /tmp/log/dragonfly:/var/log/dragonfly
+      - ./config/dfget.yaml:/etc/dragonfly/dfget.yaml
 
   scheduler:
-    image: dragonflyoss/scheduler:v2.0.1
+    image: dragonflyoss/scheduler:v2.0.2-rc.9
     depends_on:
-    - cdn
+      - cdn
+      - manager
     container_name: scheduler
     network_mode: host
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z 127.0.0.1 8002 || exit 1"]
+      interval: 1s
+      timeout: 3s
+      retries: 30
     volumes:
-    - /tmp/log/dragonfly:/var/log/dragonfly
-    - ./config/scheduler.yaml:/etc/dragonfly/scheduler.yaml
-    - ./config/cdn.json:/opt/dragonfly/scheduler-cdn/cdn.json
+      - /tmp/log/dragonfly:/var/log/dragonfly
+      - ./config/scheduler.yaml:/etc/dragonfly/scheduler.yaml
+      - ./config/cdn.json:/opt/dragonfly/scheduler-cdn/cdn.json
 
   cdn:
-    image: dragonflyoss/cdn:v2.0.1
+    image: dragonflyoss/cdn:v2.0.2-rc.9
     container_name: cdn
     network_mode: host
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z 127.0.0.1 8001 || exit 1"]
+      interval: 1s
+      timeout: 3s
+      retries: 30
     volumes:
-    - /tmp/log/dragonfly:/var/log/dragonfly
-    - ./config/cdn.yaml:/etc/dragonfly/cdn.yaml
-    - ./config/nginx.conf:/etc/nginx/nginx.conf
+      - /tmp/log/dragonfly:/var/log/dragonfly
+      - ./config/cdn.yaml:/etc/dragonfly/cdn.yaml
+      - ./config/nginx.conf:/etc/nginx/nginx.conf
