feat: fix docker-compose preheat pending
Signed-off-by: 赵安家 <anjia0532@gmail.com>

--- a/deploy/docker-compose/template/cdn.template.yaml
+++ b/deploy/docker-compose/template/cdn.template.yaml
@@ -108,10 +108,10 @@ plugins:
               intervalThreshold: 2h0m0s
 
 # console shows log on console
-console: false
+console: true
 
 # whether to enable debug level logger and enable pprof
-verbose: false
+verbose: true
 
 # listen port for pprof, only valid when the verbose option is true
 # default is -1. If it is 0, pprof will use a random port.
