--- a/deploy/docker-compose/template/dfget.template.yaml
+++ b/deploy/docker-compose/template/dfget.template.yaml
@@ -31,10 +31,10 @@ dataDir: ""
 keepStorage: true
 
 # console shows log on console
-console: false
+console: true
 
 # whether to enable debug level logger and enable pprof
-verbose: false
+verbose: true
 
 # listen port for pprof, only valid when the verbose option is true
 # default is -1. If it is 0, pprof will use a random port.
