--- a/deploy/docker-compose/template/manager.template.yaml
+++ b/deploy/docker-compose/template/manager.template.yaml
@@ -60,10 +60,10 @@ database:
 #  addr: ":8000"
 
 # console shows log on console
-console: false
+console: true
 
 # whether to enable debug level logger and enable pprof
-verbose: false
+verbose: true
 
 # listen port for pprof, only valid when the verbose option is true
 # default is -1. If it is 0, pprof will use a random port.
