feat: update docker compose version
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/deploy/docker-compose/docker-compose.yaml
+++ b/deploy/docker-compose/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
       retries: 30
 
   manager:
-    image: dragonflyoss/manager:v2.0.2-rc.20
+    image: dragonflyoss/manager:v2.0.2
     container_name: manager
     network_mode: host
     depends_on:
@@ -45,7 +45,7 @@ services:
       retries: 30
 
   dfdaemon:
-    image: dragonflyoss/dfdaemon:v2.0.2-rc.20
+    image: dragonflyoss/dfdaemon:v2.0.2
     depends_on:
       - scheduler
       - cdn
@@ -62,7 +62,7 @@ services:
       - ./config/dfget.yaml:/etc/dragonfly/dfget.yaml
 
   scheduler:
-    image: dragonflyoss/scheduler:v2.0.2-rc.20
+    image: dragonflyoss/scheduler:v2.0.2
     depends_on:
       - cdn
       - manager
@@ -79,7 +79,7 @@ services:
       - ./config/scheduler.yaml:/etc/dragonfly/scheduler.yaml
 
   cdn:
-    image: dragonflyoss/cdn:v2.0.2-rc.20
+    image: dragonflyoss/cdn:v2.0.2
     container_name: cdn
     network_mode: host
     restart: always
