--- a/deploy/docker-compose/template/cdn.template.yaml
+++ b/deploy/docker-compose/template/cdn.template.yaml
@@ -74,6 +74,10 @@ plugins:
       enable: true
       config:
         baseDir: /tmp/cdn
+    - name: memory
+      enable: false
+      config:
+        baseDir: /dev/shm/dragonfly
 
   storagemanager:
     - name: disk
@@ -108,10 +112,10 @@ plugins:
               intervalThreshold: 2h0m0s
 
 # console shows log on console
-console: true
+console: false
 
 # whether to enable debug level logger and enable pprof
-verbose: true
+verbose: false
 
 # listen port for pprof, only valid when the verbose option is true
 # default is -1. If it is 0, pprof will use a random port.
