--- a/deploy/docker-compose/template/manager.template.yaml
+++ b/deploy/docker-compose/template/manager.template.yaml
@@ -3,7 +3,7 @@ server:
   # grpc server configure
   grpc:
     # listen address
-    listen: __IP__
+    listen: 0.0.0.0
     # listen port, manager will try to listen
     # when this port is not available, manager will try next port
     port:
@@ -60,10 +60,10 @@ database:
 #  addr: ":8000"
 
 # console shows log on console
-console: true
+console: false
 
 # whether to enable debug level logger and enable pprof
-verbose: true
+verbose: false
 
 # listen port for pprof, only valid when the verbose option is true
 # default is -1. If it is 0, pprof will use a random port.
