--- a/deploy/docker-compose/template/scheduler.template.yaml
+++ b/deploy/docker-compose/template/scheduler.template.yaml
@@ -118,7 +118,7 @@ metrics:
 console: false
 
 # whether to enable debug level logger and enable pprof
-verbose: false
+verbose: true
 
 # listen port for pprof, only valid when the verbose option is true
 # default is -1. If it is 0, pprof will use a random port.
