--- a/deploy/docker-compose/template/cdn.template.yaml
+++ b/deploy/docker-compose/template/cdn.template.yaml
@@ -115,7 +115,7 @@ plugins:
 console: false
 
 # whether to enable debug level logger and enable pprof
-verbose: false
+verbose: true
 
 # listen port for pprof, only valid when the verbose option is true
 # default is -1. If it is 0, pprof will use a random port.
