feat: docker-compose write log to file (#1236)
* feat: write log to file

Signed-off-by: anjia0532 <anjia0532@gmail.com>

--- a/deploy/docker-compose/docker-compose.yaml
+++ b/deploy/docker-compose/docker-compose.yaml
@@ -37,9 +37,9 @@ services:
     restart: always
     volumes:
       - /tmp/log/dragonfly:/var/log/dragonfly
-      - ./config/manager.yaml:/etc/dragonfly/manager.yaml
+      - ./config/manager.yaml:/etc/dragonfly/manager.yaml:ro
     healthcheck:
-      test: ["CMD-SHELL", "nc -z 127.0.0.1 8080 || exit 1"]
+      test: ["CMD-SHELL", "/bin/grpc_health_probe -addr=:65003 || exit 1"]
       interval: 1s
       timeout: 3s
       retries: 30
@@ -53,13 +53,13 @@ services:
     network_mode: host
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "nc -z 127.0.0.1 65001 || exit 1"]
+      test: ["CMD-SHELL", "/bin/grpc_health_probe -addr=:65000 || exit 1"]
       interval: 1s
       timeout: 3s
       retries: 30
     volumes:
       - /tmp/log/dragonfly:/var/log/dragonfly
-      - ./config/dfget.yaml:/etc/dragonfly/dfget.yaml
+      - ./config/dfget.yaml:/etc/dragonfly/dfget.yaml:ro
 
   scheduler:
     image: dragonflyoss/scheduler:v2.0.2
@@ -70,13 +70,13 @@ services:
     network_mode: host
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "nc -z 127.0.0.1 8002 || exit 1"]
+      test: ["CMD-SHELL", "/bin/grpc_health_probe -addr=:8002 || exit 1"]
       interval: 1s
       timeout: 3s
       retries: 30
     volumes:
       - /tmp/log/dragonfly:/var/log/dragonfly
-      - ./config/scheduler.yaml:/etc/dragonfly/scheduler.yaml
+      - ./config/scheduler.yaml:/etc/dragonfly/scheduler.yaml:ro
 
   cdn:
     image: dragonflyoss/cdn:v2.0.2
@@ -84,11 +84,11 @@ services:
     network_mode: host
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "nc -z 127.0.0.1 8001 || exit 1"]
+      test: ["CMD-SHELL", "/bin/grpc_health_probe -addr=:8003 || exit 1"]
       interval: 1s
       timeout: 3s
       retries: 30
     volumes:
       - /tmp/log/dragonfly:/var/log/dragonfly
-      - ./config/cdn.yaml:/etc/dragonfly/cdn.yaml
-      - ./config/nginx.conf:/etc/nginx/nginx.conf
+      - ./config/cdn.yaml:/etc/dragonfly/cdn.yaml:ro
+      - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
