--- a/deploy/docker-compose/template/manager.template.yaml
+++ b/deploy/docker-compose/template/manager.template.yaml
@@ -3,7 +3,7 @@ server:
   # grpc server configure
   grpc:
     # listen address
-    listen: __IP__
+    listen: 0.0.0.0
     # listen port, manager will try to listen
     # when this port is not available, manager will try next port
     port:
@@ -60,7 +60,7 @@ database:
 #  addr: ":8000"
 
 # console shows log on console
-console: true
+console: false
 
 # whether to enable debug level logger and enable pprof
 verbose: true
