feat: add storage configuration to scheduler
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/scheduler/config/testdata/scheduler.yaml
+++ b/scheduler/config/testdata/scheduler.yaml
@@ -50,6 +50,11 @@ job:
     brokerDB: 1
     backendDB: 2
 
+storage:
+  maxSize: 1
+  maxBackups: 1
+  bufferSize: 1
+
 metrics:
   enable: false
   addr: ":8000"
